Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Databases (Billing Account)</relationshipLabel>
    <relationshipName>Sales_Databases4</relationshipName>
    <type>Lookup</type>
</CustomField>