Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Buyer_Country_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Country_Name__c</fullName>
    <formula>Buyer_Country__r.Name</formula>
    <label>Buyer Country</label>
    <type>Text</type>
</CustomField>