Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Buyer_Region_Roll_up_Index_New__c.field-meta.xml
<CustomField>
    <fullName>Buyer_Region_Roll_up_Index_New__c</fullName>
    <formula>TEXT( Buyer_Country__r.Region_Roll__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Buyer Region</label>
    <type>Text</type>
</CustomField>