Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>