Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Date_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoiced__c</fullName>
    <label>Date Invoiced</label>
    <type>Date</type>
</CustomField>