Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Declared_or_Inferred__c.field-meta.xml
<CustomField>
    <fullName>Declared_or_Inferred__c</fullName>
    <formula>IF(CONTAINS( Segment_Name__c ,&apos;Declared&apos;),&apos;Declared&apos;,
IF(CONTAINS(Segment_Name__c,&apos;Inferred&apos;), &apos;Inferred&apos;,
&apos;Other&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Declared or Inferred</label>
    <type>Text</type>
</CustomField>