Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Earnings_Revenue_Adjustment_USD_NEW__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Revenue_Adjustment_USD_NEW__c</fullName>
    <formula>-1 * (of_Revenue__c * Segment_Revenue_Transaction__r.Total_Adjustments_NEW__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Earnings Revenue Adjustment (USD) NEW</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>