Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Gross_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Gross_Revenue__c</fullName>
    <formula>IF(Platform__r.Revenue_Share_Eyeota_Markeplace__c!=0,(Revenue__c/(1-Platform__r.Revenue_Share_Eyeota_Markeplace__c)),Revenue__c)</formula>
    <label>Gross Revenue (For Export)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>