Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/PDT_Member__c.field-meta.xml
<CustomField>
    <fullName>PDT_Member__c</fullName>
    <label>PDT Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>