Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/PID__c.field-meta.xml
<CustomField>
    <fullName>PID__c</fullName>
    <formula>Platform__r.PID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PID</label>
    <type>Text</type>
</CustomField>