Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Platform</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Databases (Platform)</relationshipLabel>
    <relationshipName>Sales_Databases2</relationshipName>
    <type>Lookup</type>
</CustomField>