Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Platform_Raw__c.field-meta.xml
<CustomField>
    <fullName>Platform_Raw__c</fullName>
    <label>Platform Raw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>