Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Rate_Card_Spend__c.field-meta.xml
<CustomField>
    <fullName>Rate_Card_Spend__c</fullName>
    <formula>Rate_Card_CPM__c  /  Impressions__c * 1000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Rate Card Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>