Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <label>Revenue Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Transactional</fullName>
                <default>true</default>
                <label>Transactional</label>
            </value>
            <value>
                <fullName>Flat-fee</fullName>
                <label>Flat-fee - Growth</label>
            </value>
            <value>
                <fullName>DMP Subscription</fullName>
            </value>
            <value>
                <fullName>Transactional - DNB</fullName>
            </value>
            <value>
                <fullName>Flat-fee - Core</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>