Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Segment_GEO__c.field-meta.xml
<CustomField>
    <fullName>Segment_GEO__c</fullName>
    <formula>Segment_Category_Mapping__r.Segment_GEO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment GEO</label>
    <type>Text</type>
</CustomField>