Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Segment_Name_Sales_Raw_Original__c.field-meta.xml
<CustomField>
    <fullName>Segment_Name_Sales_Raw_Original__c</fullName>
    <label>Segment Name (Sales) Raw Original</label>
    <length>255</length>
    <type>Text</type>
</CustomField>