Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Target_Country__c.field-meta.xml
<CustomField>
    <fullName>Target_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target Country Lookup to Map Region and Region Roll Up</description>
    <inlineHelpText>Target Country Lookup to Map Region and Region Roll Up</inlineHelpText>
    <label>Target Country Name</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>Sales Databases (Target Country)</relationshipLabel>
    <relationshipName>Sales_Databases1</relationshipName>
    <type>Lookup</type>
</CustomField>