Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Target_Country_Raw__c.field-meta.xml
<CustomField>
    <fullName>Target_Country_Raw__c</fullName>
    <externalId>true</externalId>
    <label>Target Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>