Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/fields/Validation_Field__c.field-meta.xml
<CustomField>
    <fullName>Validation_Field__c</fullName>
    <formula>IF( Segment_Name_For_DBM_TTD_TubeMogul__c = Segment_Category_Mapping__r.DBM_ID__c ,&quot;TRUE&quot;,&quot;FALSE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validation Field</label>
    <type>Text</type>
</CustomField>