Sandbox/07-02-2025/force-app/main/default/objects/Sales_Database__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>Date_Invoiced__c</columns>
    <columns>NAME</columns>
    <columns>Buyer_and_Buyer_Country__c</columns>
    <columns>Buyer_Country__c</columns>
    <columns>Advertiser__c</columns>
    <columns>Advertiser_Sector_1__c</columns>
    <columns>Revenue__c</columns>
    <columns>Campaign__c</columns>
    <columns>eCPM__c</columns>
    <columns>Impressions__c</columns>
    <columns>Platform__c</columns>
    <columns>Segment_Category_Mapping__c</columns>
    <columns>PDT_Member__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>